--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,32 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .countdown-time {
+    @apply flex flex-col w-32 h-32 rounded-xl  bg-white items-center justify-center shadow-md;
+  }
+
+  .mempelai-pria,
+  .mempelai-wanita {
+    @apply flex
+    flex-col
+    bg-white
+    items-center
+    text-center
+    rounded-2xl
+    shadow-xl
+    p-4;
+  }
+
+  .nama-mempelai {
+    @apply text-[#884936] text-4xl sm:text-6xl md:text-5xl mb-4;
+  }
+  .urutan-anak-mempelai {
+    @apply text-4xl md:text-3xl mt-4;
+  }
+
+  .orang-tua-mempelai {
+    @apply text-3xl md:text-2xl;
+  }
+}
