update post comment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -67,6 +67,6 @@
     @apply mr-4 w-12 lg:w-20;
   }
   .text-prokes {
-    @apply text-xs font-medium;
+    @apply text-xs font-medium text-accent-500;
   }
 }
