--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -69,4 +69,19 @@
   .text-prokes {
     @apply text-xs font-medium text-accent-500;
   }
+
+  @supports not (aspect-ratio: 1 / 1) {
+    .aspect-square::before {
+      float: left;
+      padding-top: 8px;
+      content: '';
+    }
+
+    .aspect-square:after {
+      display: block;
+      content: '';
+      padding-bottom:8px;
+      clear: both;
+    }
+  }
 }
